[gd_scene load_steps=5 format=3 uid="uid://cigncmj0i2aev"]

[ext_resource type="Script" uid="uid://bpj8iyjwk35x4" path="res://scenes/set_skins/set_skins.gd" id="1_6o7re"]
[ext_resource type="Texture2D" uid="uid://e56daf0rtn6l" path="res://assets/images/background.jpg" id="1_36wwe"]
[ext_resource type="Script" uid="uid://bolqrlsb3bo81" path="res://scenes/set_skins/player.gd" id="3_o1a13"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8o6b"]
size = Vector2(353, 302)

[node name="SetSkins" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6o7re")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_36wwe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -583.0
offset_top = -331.0
offset_right = 583.0
offset_bottom = 331.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Player1" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
alignment = 1
script = ExtResource("3_o1a13")

[node name="PlayerLabel" type="Label" parent="MarginContainer/HBoxContainer/Player1"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Choose your skin ‚õπüèø‚Äç‚ôÇÔ∏è"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="HButtonContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Player1"]
layout_mode = 2

[node name="PreviousButton" type="Button" parent="MarginContainer/HBoxContainer/Player1/HButtonContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0.149373, 0.408807, 0.4079, 1)
text = "‚óÄÔ∏è"

[node name="ButtonSeparator" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Player1/HButtonContainer"]
custom_minimum_size = Vector2(324, 0)
layout_mode = 2

[node name="NextButton" type="Button" parent="MarginContainer/HBoxContainer/Player1/HButtonContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0.14902, 0.407843, 0.407843, 1)
text = "‚ñ∂Ô∏è"

[node name="CharacterBody2D" type="CharacterBody2D" parent="MarginContainer/HBoxContainer/Player1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/HBoxContainer/Player1/CharacterBody2D"]
position = Vector2(203.5, 317)
shape = SubResource("RectangleShape2D_x8o6b")

[node name="SubViewportContainer" type="SubViewportContainer" parent="MarginContainer/HBoxContainer/Player1/CharacterBody2D"]
offset_left = -78.0
offset_top = 133.0
offset_right = 522.0
offset_bottom = 564.0

[node name="SubViewport" type="SubViewport" parent="MarginContainer/HBoxContainer/Player1/CharacterBody2D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(600, 400)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="MarginContainer/HBoxContainer/Player1/CharacterBody2D/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.999529, 0.030678, 0, -0.030678, 0.999529, 0, 0.207, 6.72565)
projection = 1
current = true
size = 2.42119

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="MarginContainer/HBoxContainer/Player1/CharacterBody2D/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.16486)
light_color = Color(0.859148, 0.7341, 0.805527, 1)
light_energy = 0.8

[node name="SkinView" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Player1"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="MarginContainer/HBoxContainer/Player1"]
layout_mode = 2
text = "CONFIRM"
